

Name: Segue ChangeLog


v. 1.3.0 (the future)
----------------------------------------------------
		
	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
		
		
	* Change: Added the HTML Area editor to Image, Link, and File, story types. (Adam Franco)
		
	* Bug Fix: Fixed bug in display of stories by enclosing each story in a table to prevent edit and discuss/assess links from shifting across stories (Alex Chapin)
		
	* Change: When logging in and logging out, users are kept on the same page if possible instead of being redirected back to the default page. (Adam Franco)
		
	* Change: The 'Site not availible' error is now more informative and includes links to "Home" as well as a "create site" link if the active user is allowed to create a site in that place. The latter is useful when taking advantage of the vhost functionality. (Adam Franco)
		
	* Change: When Changing to a differnt active user as admin, you are now kept on the same page. (Adam Franco)
		
	* New feature: Segue can now be configured to restrict users to given sites based on the virtual host asked for. Each vhost must be set up on the webserver as well as in the Segue config. (Gabe Schine)
		
	* Bug Fix: stripped html tags from of first 25 characters of content that is the topic of discussion and is displayed in discussion/assessment participation summary. (Alex Chapin)
		
	* Change: Changed the way semesters are defined and handled. Segue can now be configured to have as few or many semesters as desired, each with custom start/end days. (Adam Franco)
		