@@ -10,6 +10,11 @@
 			to make several changes to Segue's database and file-storage structure.
 		 (<i>Adam Franco</i>)
 		
+		<li/> Change: <a href="&#10;        &#9;&#9;&#9;&#9;http://sourceforge.net/tracker/index.php?func=detail&amp;aid=865093&amp;group_id=82171&amp;atid=565234">
+        			#865093</a> 
+			View and activate permission settings on template sites now affect
+			who/when they appear for users creating sites.
+		 (<i>Adam Franco</i>)
 		<li/> Change:  
 			Added the HTML Area editor to Image, Link, and File, story types.
 		 (<i>Adam Franco</i>)
